# nocturnal-archive

./: .env.production.example  .gitignore  .slugignore  ACTION_PLAN.md  AGENT_IMPROVEMENTS.md  AI_AGENT_README.md  API_BUILD_SPECIFICATION.md  API_DOCUMENTATION.md  ARCHIVE_IMPROVEMENTS.md  BETA_LAUNCH_READY.md  BUG_FIX_REPORT.md  BUILD_EXE.md  CHANGELOG.md  CODE_EXECUTION_STATUS.md  COMMERCIAL_LAUNCH_SUMMARY.md  COMPLETE_DEVELOPMENT_CONTEXT.md  COMPLETE_FEATURE_IMPLEMENTATION.md  COMPLETE_SYSTEM_REVIEW.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_v1.3.md  COMPREHENSIVE_STRESS_TEST_FINDINGS.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CONSOLIDATION_SUMMARY.md  CONVERSATION_INTELLIGENCE_SUMMARY.md  CONVERSATION_TEST_SUITE.md  Cite-Agent-Installer.ps1  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_v1.3.9.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_v1.2.2.md  DISTRIBUTION_NOW.md  DISTRIBUTION_README.md  DURATION_FILTER_FIX_DOCUMENTATION.md  Dockerfile.production  ENGINE_EXTRACTION_GUIDE.md  EXECUTION_ORDER_FIX.md  FEATURES.md  FINAL_CODE_EXECUTION_TEST.md  FINAL_STATUS.md  (+116 more)
nocturnal-archive-api/: .coverage  CAPABILITY_AWARE_ROUTING.md  Dockerfile.production  HANDOFF_SUMMARY.md  Makefile  OPERATIONAL_FLOWS_ASSESSMENT.md  PR3_PRODUCTION_READY.md  PRODUCTION_READY_STATUS.md  README.md  docker-compose.production.yml  docker-compose.yml  env.example  go_no_go_battery.sh  init_rag_db.sql  prime_cache.py  pyproject.toml  railway.toml  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements-optional.txt  requirements.txt  setup_db.py  setup_pgvector.sh  stress_test_results.json  test_shell_security.py
nocturnal-archive-api/.github/workflows/: ci.yml  production.yml
nocturnal-archive-api/cli/: finsight.py
nocturnal-archive-api/config/: concept_map.yml  ifrs_map.yml  kpi.yml  sources.yaml
nocturnal-archive-api/data/: symbol_map.parquet
nocturnal-archive-api/data/sec/: sections.parquet
nocturnal-archive-api/deploy/: Caddyfile  Caddyfile.prod  docker-compose.yml  prometheus.yml  restore_drill.sh  rollback.sh
nocturnal-archive-api/docker/: Dockerfile  docker-compose.yml
nocturnal-archive-api/docs/: finsight-postman-collection.json  legal_disclaimers.md  openapi.yaml  problem_catalog.md  quickstart.md
nocturnal-archive-api/docs/archive/: ENTERPRISE_FEATURES_COMPLETE.md  ENTERPRISE_GRADE_ASSESSMENT.md  FINAL_PRODUCTION_READY.md  FINAL_PRODUCTION_STATUS.md  FINGPT_INTEGRATION_SUMMARY.md  FLIP_PLAN.md  LAST_MILE_CHECKLIST.md  PILOT_DEPLOYMENT_GUIDE.md  PILOT_GUARDS_TEST_REPORT.md  PR1_PR2_COMPLETION_SUMMARY.md  PR3_COMPLETION_SUMMARY.md  PRODUCTION_FLIP_CHECKLIST.md  PRODUCTION_FLIP_READY.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_FINAL.md  multi_source_router.py  test_production_components.py
nocturnal-archive-api/docs/status/: HARD_CHECKS_VALIDATION_REPORT.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RESTORATION_COMPLETE.md  SOPHISTICATED_RESTORATION_COMPLETE.md  VALIDATION_REPORT.md
nocturnal-archive-api/examples/fin/: 10k_mda_grounded.ipynb  cpi_commentary.ipynb
nocturnal-archive-api/prometheus/: alerts.yml
nocturnal-archive-api/scripts/: alpha_audit.sh  backup_dr.sh  check_logs_secrets.sh  check_sources.py  demo.sh  deploy_production.sh  keys_rotate.sh  prime_cache.sh  production_smoke.sh  red_team_smoke.sh  run_notebooks_ci.sh  smoke_finance.sh  test_edgar_reality.py  validate_production.sh
nocturnal-archive-api/src/: __init__.py  config.py  main.py  main_production.py
nocturnal-archive-api/src/adapters/: advanced_browser_finance.py  browser_finance.py  edgar.py  sec_facts.py  sec_filings.py  segment_parser.py  yahoo_finance.py  (+1 more)
nocturnal-archive-api/tests/: conftest.py  test_api.py  test_ingest_sec.py  test_kpis_golden.py  test_production_features.py  test_rag_smoke.py  test_sentiment.py  test_symbol_map.py
rust_performance/: Cargo.toml  build.py
rust_performance/src/: cache.rs  lib.rs  processor.rs  scraper.rs
unified-platform/vertikal-package/: CHANGELOG.md  LICENSE  QUICK_START.md  README.md  pyproject.toml
(+624 files in other folders)
